# enziu

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  SUBMISSION.md
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/models/: __init__.py  schemas.py
api/app/prompts/: README.md  __init__.py  broker_compare.md  customer_deep_dive.md  enziu_auditor.md  enziu_extractor.md  enziu_index.md  map_chunk.md  reduce_factsheet.md  sneak_peek.md  sneak_peek_chunk.md
api/app/services/: __init__.py  inference.py  paddle.py  pdf_extractor.py  policy_auditor.py  security.py  voucher.py
web/: DESIGN_SYSTEM.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/compliance/: page.tsx
web/app/cookies/: page.tsx
web/app/disclaimer/: page.tsx
web/app/privacy/: page.tsx
web/app/recover/: page.tsx
web/app/security/: page.tsx
web/app/terms/: page.tsx
web/app/vouchers/: page.tsx
web/components/: amber-asterisk.tsx  footer.tsx  header.tsx  mode-toggle.tsx  simple-header.tsx
web/components/broker/: broker-mode.tsx  comparative-qa.tsx  dual-dropzone.tsx  policy-pill-toggle.tsx  verdict-bar.tsx  voucher-input.tsx  voucher-packs.tsx
web/components/customer/: customer-mode.tsx  deep-dive-chat.tsx  deep-dive-questions.tsx  dropzone.tsx  full-report.tsx  paddle-checkout.tsx  pdf-viewer.tsx  sneak-peek-bento.tsx  voucher-recovery.tsx
web/components/theme/: theme-toggle.tsx
web/components/ui/: button.tsx  gradient-icon.tsx  progress.tsx
web/context/: ModeContext.tsx  ThemeContext.tsx
web/lib/: pdf-storage.ts  utils.ts
web/types/: css.d.ts  index.ts
